- Múltiples modificaciones para hacer funcionar Inscripciones.